fix(blog): vertically align byline text with headshots

--- a/src/components/pages/blog/byline.module.scss
+++ b/src/components/pages/blog/byline.module.scss
@@ -54,7 +54,7 @@
   @extend .byline-base;
   margin-top: 0;
   margin-bottom: 8px;
-  p {
+  .byline-text {
     margin: 12px 0;
   }
   .headshot-container,
